--- a/package.json
+++ b/package.json
@@ -9,34 +9,5 @@
     "types/**/*"
   ],
   "types": "types/OpenCrypto.d.ts",
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/safebash/opencrypto.git"
-  },
-  "scripts": {
-    "test": "karma start --single-run --browsers ChromeHeadless karma.conf.js",
-    "createTypes": "tsc"
-  },
-  "license": "MIT",
-  "keywords": [
-    "cryptography",
-    "browser",
-    "webcryptography"
-  ],
-  "bugs": {
-    "url": "https://github.com/safebash/opencrypto/issues",
-    "email": "support@safebash.com"
-  },
-  "devDependencies": {
-    "chai": "^4.2.0",
-    "es6-promise": "^4.2.8",
-    "karma": "^6.0.4",
-    "karma-chai": "^0.1.0",
-    "karma-chrome-launcher": "^3.1.0",
-    "karma-mocha": "^2.0.1",
-    "mocha": "^8.2.1",
-    "puppeteer": "^5.5.0",
-    "standard": "^16.0.3",
-    "typescript": "^4.1.3"
-  }
+  "license": "MIT"
 }
