--- a/package.json
+++ b/package.json
@@ -12,6 +12,6 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/LioXP/deno-opencrypto.git"
+    "url": "git+https://github.com/LioXP/deno-opencrypto.git"
   }
 }
